added files and sections

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <section class="well5">
     <div class="container wow fadeInUp">
         <h3>who we are</h3>
-        <img src="images/page-2_img01.jpg" alt="">
+        <img src="images/chitrayan/studio/6.jpg" alt="">
         <h5 class="marg">State of the art film studio for all your needs. </h5>
         <p>
             Chitrayan Film Studio is one of the latest additions to the list of film studios in Kolkata.
@@ -11,7 +11,42 @@
             There have already been shootings of Bengali films, reality shows and serials. An experienced management team is ever present to cater to your demands.
         </p>
     </div>
+    <div class="container wow fadeInUp">
+        <h3>where we are</h3>
+        <h5 class="marg">Conveniently located in the city. </h5>
+        <p>
+            Chitrayan Film Studio is conveniently located in the southern part of Kolkata in Bagpota. <br/>
+            Just 3 kilometers away from the proposed Thakurpukur Metro Railway Station<br/>
+            3 kilometers from Joka. <br/>
+            Simply 10 kilometers from the center of Tollywood,  Tollygunj.<br/>
+            Thanks to the locational advantage production services are easily accessible.
+        </p>
+        <div class="map">
+            <div id="google-map" class="map_model"></div>
+            <ul class="map_locations">
+                <li data-x="22.4538082" data-y="88.2816636">
+                    <p>Bagpota, Kolkata, West Bengal 700141</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container wow" style="margin-top: 50px">
+        <h3>Routes from different locations</h3>
+        <h5 class="marg">Thakurpukur to Chitrayan (3 kilometers, 11 minutes) </h5>
+        <img src="images/thakurpur_chitrayan.jpg" alt="">
+
+        <h5 class="marg">Tollygunj to Chitrayan (10 kilometers, 30 minutes) </h5>
+        <img src="images/tolly_chitrayan.jpg" alt="">
+
+        <h5 class="marg">Joka to Chitrayan (3 kilometers, 12 minutes) </h5>
+        <img src="images/joka_chitrayan.jpg" alt="">
+    </div>
 </section>
+<script>
+    (function() {
+        initMap();
+    })();
+</script>
 <!--<section class="parallax parallax_3" data-url="images/parallax3.jpg">
     <div class="container">
         <h3>awards</h3>
