--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="location.html">Location</a>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="explore.html">Explore</a>
                     </li>
@@ -96,7 +96,7 @@
                         <a href="testimonials.html">Gallery</a>
                     </li>-->
                     <li>
-                        <a href="testimonials.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                     <!--<li>
                       <a href="contact.html">Contact</a>
