--- a/infra.html
+++ b/infra.html
@@ -1,64 +1,65 @@
 <section class="well">
     <div class="container">
-        <h3>our blog</h3>
+        <h3>Infrastructure</h3>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/page-5_img01.jpg" alt="">
+                <img src="images/chitrayan/infra/fire.JPG" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Lorem ipsum dolor sit amet consectetuer adipiscing</a></h5>
-                <p class="text1">
+                <h5><a href="#">Fire Alarm</a></h5>
+                <!--<p class="text1">
                     <a class="comments" href="#"><span class="fa fa-comment"></span>3 comments</a>
                     Added 2 days ago by
                     <a class="link1" href="#">Admin</a>
                 </p>
                 <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. </p>
-                <a class="btn" href="#">read more</a>
+                <a class="btn" href="#">read more</a>-->
+                <p>Modern technology fire detection and prevention system. </p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/page-5_img02.jpg" alt="">
+                <img src="images/chitrayan/infra/dormitory.JPG" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Lorem ipsum dolor sit amet consectetuer adipiscing</a></h5>
-                <p class="text1">
-                    <a class="comments" href="#"><span class="fa fa-comment"></span>6 comments</a>
-                    Added 2 days ago by
-                    <a class="link1" href="#">Admin</a>
-                </p>
-                <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. </p>
-                <a class="btn" href="#">read more</a>
+                <h5><a href="#">Dormitory</a></h5>
+                <p>Large dormitory for resting or night stay of technicians.</p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/page-5_img03.jpg" alt="">
+                <img src="images/chitrayan/infra/canteen.JPG" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Lorem ipsum dolor sit amet consectetuer adipiscing</a></h5>
-                <p class="text1">
-                    <a class="comments" href="#"><span class="fa fa-comment"></span>5 comments</a>
-                    Added 2 days ago by
-                    <a class="link1" href="#">Admin</a>
-                </p>
-                <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. </p>
-                <a class="btn" href="#">read more</a>
+                <h5><a href="#">Canteen</a></h5>
+                <p>Chitrayan also boasts of a canteen which serves delicious food.</p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/page-5_img04.jpg" alt="">
+                <img src="images/chitrayan/facilities/senior_makeup.jpg" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Lorem ipsum dolor sit amet consectetuer adipiscing</a></h5>
-                <p class="text1">
-                    <a class="comments" href="#"><span class="fa fa-comment"></span>4 comments</a>
-                    Added 2 days ago by
-                    <a class="link1" href="#">Admin</a>
-                </p>
-                <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. </p>
-                <a class="btn" href="#">read more</a>
+                <h5><a href="#">Senior Make-Up Room</a></h5>
+                <p>There are two individual make up rooms in the main building for senior artistes. These rooms are fully air-conditioned with beds and attached bathrooms</p>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <img src="images/chitrayan/facilities/junior_makeup.jpg" alt="">
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">General Make-Up Room</a></h5>
+                <p>There are two general make up rooms in the main building for all artistes.</p>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <img src="images/chitrayan/facilities/production_office.jpg" alt="">
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Production Offices</a></h5>
+                <p>There are two production offices adjacent to the studio.</p>
             </div>
         </div>
     </div>
