--- a/contact.html
+++ b/contact.html
@@ -1,70 +1,62 @@
-<section class="well5">
-    <div class="container">
-        <h3>contact form</h3>
-        <form id="contact-form" class='contact-form'>
-            <div class="contact-form-loader"></div>
-            <fieldset>
-                <div class="input-wrap">
-                    <label class="name">
-                        <input type="text" name="name" placeholder="Name:" value=""
-                               data-constraints="@Required @JustLetters"/>
+<main>
+    <section class="well5">
+        <div class="container">
+            <h3>contact form</h3>
+            <!--<form id="contact-form" class='contact-form'>
+                <div class="contact-form-loader"></div>
+                <fieldset>
+                    <div class="input-wrap">
+                        <label class="name">
+                            <input type="text" name="name" placeholder="Name:" value=""
+                                   data-constraints="@Required @JustLetters"/>
 
-                        <span class="empty-message">*This field is required.</span>
-                        <span class="error-message">*This is not a valid name.</span>
-                    </label>
-                    <label class="email">
-                        <input type="text" name="email" placeholder="E-mail:" value=""
-                               data-constraints="@Required @Email"/>
+                            <span class="empty-message">*This field is required.</span>
+                            <span class="error-message">*This is not a valid name.</span>
+                        </label>
+                        <label class="email">
+                            <input type="text" name="email" placeholder="E-mail:" value=""
+                                   data-constraints="@Required @Email"/>
 
-                        <span class="empty-message">*This field is required.</span>
-                        <span class="error-message">*This is not a valid email.</span>
-                    </label>
-                    <label class="phone">
-                        <input type="text" name="phone" placeholder="Phone:" value=""
-                               data-constraints="@JustNumbers"/>
+                            <span class="empty-message">*This field is required.</span>
+                            <span class="error-message">*This is not a valid email.</span>
+                        </label>
+                        <label class="phone">
+                            <input type="text" name="phone" placeholder="Phone:" value=""
+                                   data-constraints="@JustNumbers"/>
 
-                        <span class="empty-message">*This field is required.</span>
-                        <span class="error-message">*This is not a valid phone.</span>
-                    </label>
-                </div>
-                <label class="message">
+                            <span class="empty-message">*This field is required.</span>
+                            <span class="error-message">*This is not a valid phone.</span>
+                        </label>
+                    </div>
+                    <label class="message">
                   <textarea name="message" placeholder="Message:"
                             data-constraints='@Required @Length(min=20,max=999999)'></textarea>
 
-                    <span class="empty-message">*This field is required.</span>
-                    <span class="error-message">*The message is too short.</span>
-                </label>
-                <div class="btn-wr">
-                    <a class="btn" href="#" data-type="reset">reset</a>
-                    <a class="btn" href="#" data-type="submit">submit</a>
-                </div>
-            </fieldset>
-            <div class="modal fade response-message">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal"
-                                    aria-hidden="true">
-                                &times;
-                            </button>
-                            <h4 class="modal-title">Modal title</h4>
-                        </div>
-                        <div class="modal-body">
-                            You message has been sent! We will be in touch soon.
+                        <span class="empty-message">*This field is required.</span>
+                        <span class="error-message">*The message is too short.</span>
+                    </label>
+                    <div class="btn-wr">
+                        <a class="btn" href="#" data-type="reset">reset</a>
+                        <a class="btn" href="#" data-type="submit">submit</a>
+                    </div>
+                </fieldset>
+                <div class="modal fade response-message">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"
+                                        aria-hidden="true">
+                                    &times;
+                                </button>
+                                <h4 class="modal-title">Modal title</h4>
+                            </div>
+                            <div class="modal-body">
+                                You message has been sent! We will be in touch soon.
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </form>
-    </div>
-</section>
-<section>
-    <div class="map">
-        <div id="google-map" class="map_model"></div>
-        <ul class="map_locations">
-            <li data-x="-73.9874068" data-y="40.638000">
-                <p>9863 - 9867 Mill Road, Cambridge, MG09 99HT</p>
-            </li>
-        </ul>
-    </div>
-</section>
+            </form>-->
+        </div>
+    </section>
+</main>
