--- a/infra.html
+++ b/infra.html
@@ -37,29 +37,29 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/senior_makeup.jpg" alt="">
+                <img src="images/chitrayan/infra/parking.JPG" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Senior Make-Up Room</a></h5>
-                <p>There are two individual make up rooms in the main building for senior artistes. These rooms are fully air-conditioned with beds and attached bathrooms</p>
-            </div>
-        </div>
-        <div class="row blog wow fadeInRight">
-            <div class="grid_6">
-                <img src="images/chitrayan/facilities/junior_makeup.jpg" alt="">
-            </div>
-            <div class="grid_6">
-                <h5><a href="#">General Make-Up Room</a></h5>
-                <p>There are two general make up rooms in the main building for all artistes.</p>
+                <h5><a href="#">Parking</a></h5>
+                <p>Ample car parking space for several cars as well as big vehicles carrying goods and equipments.</p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/production_office.jpg" alt="">
+                <img src="images/chitrayan/infra/facilities.JPG" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Production Offices</a></h5>
-                <p>There are two production offices adjacent to the studio.</p>
+                <h5><a href="#">Facilities Team</a></h5>
+                <p>Chitrayan has a dedicated team for facilities and admin ensuring a clean premise and catering to all your demands.</p>
+            </div>
+        </div>
+        <div class="row blog wow fadeInRight">
+            <div class="grid_6">
+                <img src="images/chitrayan/infra/generator.JPG" alt="">
+            </div>
+            <div class="grid_6">
+                <h5><a href="#">Power backup</a></h5>
+                <p>Chitrayan provides you with a powerful generator for uninterrupted power supply.</p>
             </div>
         </div>
     </div>
