--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="facilities.html">Facilities</a>
                     </li>
                     <li>
-                        <a href="infra.html">Infrastructure</a>
+                        <a href="infrastructure.html">Infrastructure</a>
                     </li>
 
                     <!--<li>
