--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                     </div>
                     <div class="row isotop">
                         <div class="grid_4 isotop_item category01">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/1.JPG">
-                                <img class="preview-image" src="images/chitrayan/shooting/1.JPG" alt="">
+                            <a data-fancybox-group="1" onclick="return false;" class="thumb" href="images/chitrayan/shooting/1.jpg">
+                                <img class="preview-image" src="images/chitrayan/shooting/1.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
