--- a/infrastructure.html
+++ b/infrastructure.html
@@ -3,7 +3,7 @@
         <h3>Infrastructure</h3>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/fire.JPG" alt="">
+                <img src="images/chitrayan/infra/fire_preview.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Fire Alarm</a></h5>
@@ -19,7 +19,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/dormitory.JPG" alt="">
+                <img src="images/chitrayan/infra/dormitory_preview.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Dormitory</a></h5>
@@ -28,7 +28,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/canteen.JPG" alt="">
+                <img src="images/chitrayan/infra/canteen_preview.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Canteen</a></h5>
@@ -37,7 +37,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/parking.JPG" alt="">
+                <img src="images/chitrayan/infra/parking_preview.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Parking</a></h5>
@@ -46,7 +46,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/facilities.JPG" alt="">
+                <img src="images/chitrayan/infra/facilities_preview.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Facilities Team</a></h5>
@@ -55,7 +55,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/generator.JPG" alt="">
+                <img src="images/chitrayan/infra/generator_preview.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Power backup</a></h5>
