--- a/studio.html
+++ b/studio.html
@@ -10,7 +10,7 @@
             Thanks to the spacious floor, multiple sets can be created thus saving time and money for our customers.<br/>
         </p>
         <br/>
-        <img src="images/chitrayan/studio/1.JPG" alt="">
+        <img src="images/chitrayan/studio/1.jpg" alt="">
         <h5 class="marg">Safe catwalk. </h5>
         <p>
             Catwalks are used to suspend lighting instruments and microphones directed at the stage. The catwalks provide easy access for theater personnel to perform common tasks.<br/>
@@ -29,7 +29,7 @@
 
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/1.JPG" alt="">
+                <img src="images/chitrayan/shooting/1.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
