--- a/index.html
+++ b/index.html
@@ -181,39 +181,39 @@
                         <div class="box">
                             <h4>SHOOTING FLOOR</h4>
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img01_original.jpg">
-                                <img src="images/page-1_img01.jpg" alt="">
+                                <img src="images/chitrayan/studio/1_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
-                            <h6>Mauris fermeum dictum magna.</h6>
-                            <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curs.</p>
-                            <!--<a class="btn" href="#">read more</a>-->
+                            <h6>Spacious air-conditioned studio.</h6>
+                           <!-- <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
+                                vel curs.</p>-->
+                            <!--<a class="btn" href="studio.html">read more</a>-->
                         </div>
                     </div>
                     <div class="grid_4 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="box">
                             <h4>DRESSING ROOMS</h4>
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img02_original.jpg">
-                                <img src="images/page-1_img02.jpg" alt="">
+                                <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
-                            <h6>Sed loreet aliquam leote llus dol.</h6>
-                            <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curs.</p>
-                            <!--<a class="btn" href="#">read more</a>-->
+                            <h6>Well-lit air-conditioned make-up rooms</h6>
+                            <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
+                                vel curs.</p>-->
+                            <!--<a class="btn" href="facilities.html">read more</a>-->
                         </div>
                     </div>
                     <div class="grid_4 wow fadeInRight" data-wow-delay="0.4s">
                         <div class="box">
-                            <h4>PRODUCTION ROOM</h4>
+                            <h4>PRODUCTION CONTROL ROOM</h4>
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img03_original.jpg">
-                                <img src="images/page-1_img03.jpg" alt="">
+                                <img src="images/chitrayan/facilities/pcr2_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
-                            <h6>Mauris fermeum dictum magna.</h6>
-                            <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curs.</p>
-                            <!--<a class="btn" href="#">read more</a>-->
+                            <h6>Hi-tech production control room</h6>
+                            <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
+                                vel curs.</p>-->
+                            <!--<a class="btn" href="facilities.html">read more</a>-->
                         </div>
                     </div>
                 </div>
@@ -260,23 +260,55 @@
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
+                    </div>
+                    <div class="row isotop">
                         <div class="grid_4 isotop_item category02">
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img06_original.jpg">
-                                <img class="preview-image" src="images/page-1_img06.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/1.jpg">
+                                <img class="preview-image" src="images/chitrayan/studio/1_preview.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category02">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/2.jpg">
+                                <img class="preview-image" src="images/chitrayan/studio/2_preview.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category02">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/3.jpg">
+                                <img class="preview-image" src="images/chitrayan/studio/3_preview.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category02">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/4.jpg">
+                                <img class="preview-image" src="images/chitrayan/studio/4_preview.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category02">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/5.jpg">
+                                <img class="preview-image" src="images/chitrayan/studio/5_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                     </div>
                     <div class="row isotop">
                         <div class="grid_4 isotop_item category03">
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img07_original.jpg">
-                                <img class="preview-image" src="images/page-1_img07.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/glass_room_preview.jpg">
+                                <img class="preview-image" src="images/chitrayan/facilities/glass_room.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category03">
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img09_original.jpg">
-                                <img class="preview-image" src="images/page-1_img09.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/senior_makeup_preview.jpg">
+                                <img class="preview-image" src="images/chitrayan/facilities/senior_makeup.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category03">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/parking_preview.jpg">
+                                <img class="preview-image" src="images/chitrayan/infra/parking.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
@@ -288,7 +320,7 @@
             <div class="container well3">
                 <h3>Chitrayan so far....</h3>
             </div>
-            <div class="parallax parallax_2" data-url="images/parallax2.jpg"></div>
+            <div class="parallax parallax_2" data-url="images/chitrayan/studio/6.jpg"></div>
             <!--<div class="container well4">
                 <div class="row">
                     <div class="grid_6 wow fadeInLeft">
@@ -317,12 +349,6 @@
                                 <div class="counter">01</div>
                                 <h3>Movies</h3>
                             </a>
-                            <h5><a href="#">Lorem ipsum</a></h5>
-                            <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis.
-                                Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at
-                                neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
-                                eros.</p>
                         </div>
                     </div>
                     <!--<div class="grid_3">
@@ -345,12 +371,6 @@
                                 <div class="counter">01</div>
                                 <h3>tv</h3>
                             </a>
-                            <h5><a href="#">Lorem ipsum</a></h5>
-                            <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis.
-                                Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at
-                                neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
-                                eros.</p>
                         </div>
                     </div>
                     <div class="grid_3">
@@ -359,12 +379,6 @@
                                 <div class="counter">01</div>
                                 <h3>shows</h3>
                             </a>
-                            <h5><a href="#">Lorem ipsum</a></h5>
-                            <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                                vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis.
-                                Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at
-                                neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
-                                eros.</p>
                         </div>
                     </div>
                 </div>
@@ -420,6 +434,9 @@
                         <li><a href="#"><span class="fa fa-facebook"></span></a></li>
                     </ul>-->
                 </div>
+                <div class="grid_6">
+                    <p>Developed by GSG Tech</p>
+                </div>
             </div>
             <!-- {%FOOTER_LINK} -->
         </div>
@@ -451,24 +468,6 @@
         });
     }
 </script>
-<!--<script>
-    window.fbAsyncInit = function() {
-        FB.init({
-            appId      : '1241778969245906',
-            xfbml      : true,
-            version    : 'v2.8'
-        });
-        FB.AppEvents.logPageView();
-    };
-
-    (function(d, s, id){
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) {return;}
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-</script>-->
 <script src="js/utility/pageLoader.js"></script>
 <script src="js/utility/script.js"></script>s
 </body>
