Completed contact form

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/google-map.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contact-form.css">
 
     <script src="js/lib/jquery.js"></script>
     <script src="js/jquery-migrate-1.2.1.js"></script>
