--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,22 @@
     <section class="well5">
         <div class="container">
             <h3>contact form</h3>
-            <!--<form id="contact-form" class='contact-form'>
+            <!--<form>
+                <div class="form-group">
+                    <label for="email">Name:</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email address:</label>
+                    <input type="email" class="form-control" id="email">
+                </div>
+                <div class="form-group">
+                    <label for="pwd">Comments:</label>
+                    <input type="password" class="form-control" id="pwd">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>-->
+            <form id="contact-form" class='contact-form'>
                 <div class="contact-form-loader"></div>
                 <fieldset>
                     <div class="input-wrap">
@@ -56,7 +71,7 @@
                         </div>
                     </div>
                 </div>
-            </form>-->
+            </form>
         </div>
     </section>
 </main>
