--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container wow fadeInUp">
         <h3>where we are</h3>
-        <h5 class="marg">Conveniently located in the city. </h5>
+        <h5 class="marg">Panoramic view of the location. </h5>
         <p>
             Chitrayan Film Studio is conveniently located in the southern part of Kolkata in Bagpota. <br/>
             Just 3 kilometers away from the proposed Thakurpukur Metro Railway Station<br/>
@@ -32,13 +32,13 @@
     </div>
     <div class="container wow" style="margin-top: 50px">
         <h3>Routes from different locations</h3>
-        <h5 class="marg">Thakurpukur to Chitrayan (3 kilometers, 11 minutes) </h5>
+        <h5 class="marg">Thakurpukur Market to Chitrayan (3 kilometers) </h5>
         <img src="images/thakurpur_chitrayan.jpg" alt="">
 
-        <h5 class="marg">Tollygunj to Chitrayan (10 kilometers, 30 minutes) </h5>
+        <h5 class="marg">Tollygunj Crossing to Chitrayan (10 kilometers) </h5>
         <img src="images/tolly_chitrayan.jpg" alt="">
 
-        <h5 class="marg">Joka to Chitrayan (3 kilometers, 12 minutes) </h5>
+        <h5 class="marg">Joka to Chitrayan (3 kilometers) </h5>
         <img src="images/joka_chitrayan.jpg" alt="">
     </div>
 </section>
@@ -131,8 +131,8 @@
                 <div class="box3" data-equal-group="1">
                     <img src="images/page-2_img04.jpg" alt="">
                     <div class="box3_cnt">
-                        <h5>Agniva Som</h5>
-                        <h6>Co-Owner</h6>
+                        <h5>Ashok Bhattacharya</h5>
+                        <h6>General Manager</h6>
                         <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
                         <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
