--- a/facilities.html
+++ b/facilities.html
@@ -40,7 +40,7 @@
                 <img src="images/chitrayan/facilities/senior_makeup_preview.jpg" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Senior Make-Up Room</a></h5>
+                <h5><a href="#">Make-Up Room</a></h5>
                 <p>There are two individual make up rooms in the main building for senior artistes. These rooms are fully air-conditioned with beds and attached bathrooms</p>
             </div>
         </div>
@@ -49,7 +49,7 @@
                 <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">General Make-Up Room</a></h5>
+                <h5><a href="#">Make-Up Room</a></h5>
                 <p>There are two general make up rooms in the main building for all artistes.</p>
             </div>
         </div>
