--- a/infrastructure.html
+++ b/infrastructure.html
@@ -22,7 +22,7 @@
                 <img src="images/chitrayan/infra/dormitory_preview.jpg" alt="">
             </div>
             <div class="grid_6">
-                <h5><a href="#">Dormitory</a></h5>
+                <h5><a href="#">Hall</a></h5>
                 <p>Large dormitory for resting or night stay of technicians.</p>
             </div>
         </div>
