--- a/studio.html
+++ b/studio.html
@@ -1,7 +1,7 @@
 <section class="well5">
     <div class="container wow fadeInUp">
         <h3>Studio Floor</h3>
-        <h5 class="marg">A huge XXX feet by YYY feet air conditioned studio floor. </h5>
+        <h5 class="marg">A huge 120 feet by 85 feet air conditioned studio floor. </h5>
         <p>
             The studio floor is the actual stage on which the actions that will be recorded and viewed take place.<br/>
             Chitrayan has kept that in mind and provided you all the space you need.<br/>
@@ -11,7 +11,7 @@
         </p>
         <br/>
         <img src="images/chitrayan/studio/1.jpg" alt="">
-        <h5 class="marg">Safe catwalk. </h5>
+        <h5 class="marg">Catwalk. </h5>
         <p>
             Catwalks are used to suspend lighting instruments and microphones directed at the stage. The catwalks provide easy access for theater personnel to perform common tasks.<br/>
             Chitrayan has taken advice of renowned structural engineers to provide you with the safest catwalk in the industry.<br/>
@@ -21,7 +21,7 @@
         <img src="images/chitrayan/studio/5.JPG" alt="">
 
 
-        <h5 class="marg">Glimpses of shootings. </h5>
+        <h5 class="marg">Shooting floor in operation. </h5>
         <p>
             Following are some shootings that took place in Chitrayan.
         </p>
