--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
                 <div class="container brand_container">
                     <div class="top-panel">
                         <ul class="list">
-                            <li><span class="fa fa-map-marker"></span>Bagpota, Kolkata, West Bengal 700141</li>
-                            <li><a href="callto:#"><span class="fa fa-phone"></span>+91 9739988366</a></li>
+                            <li><span class="fa fa-map-marker"></span>KALAGACHIA, SAKHARIPOTA MAIN ROAD, P.O. THAKURPUKUR</li><br/>
+                            <li></span>P.S MAHESHTALA, DIST. SOUTH 24-PARGANAS</li><br/>
+                            <li><a href="callto:#"><span class="fa fa-phone"></span>+91 9830064251</a></li>
                             <!--<li><a href="#"><span class="fa fa-child"></span>login or register</a></li>-->
                         </ul>
                     </div>
@@ -217,7 +218,7 @@
                     </div>
                     <div class="grid_4 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="box">
-                            <h4>DRESSING ROOMS</h4>
+                            <h4>MAKE-UP ROOMS</h4>
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img02_original.jpg">
                                 <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
