--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
             <nav class="nav">
                 <ul class="sf-menu" data-type="navbar" style>
                     <li class="active">
-                        <a href="home.html">Home</a>
+                        <a class="page-link" href="home.html">Home</a>
                     </li>
                     <li>
-                        <a href="studio.html">Studio</a>
+                        <a class="page-link" href="studio.html">Studio</a>
                     </li>
                     <li>
-                        <a href="facilities.html">Facilities</a>
+                        <a class="page-link" href="facilities.html">Facilities</a>
                     </li>
                     <li>
-                        <a href="infrastructure.html">Infrastructure</a>
+                        <a class="page-link" href="infrastructure.html">Infrastructure</a>
                     </li>
 
                     <!--<li>
@@ -103,13 +103,13 @@
                         </ul>
                     </li>-->
                     <li>
-                        <a href="about.html">About</a>
+                        <a class="page-link" href="about.html">About</a>
                     </li>
                     <!--<li>
                         <a href="location.html">Location</a>
                     </li>-->
                     <li>
-                        <a href="explore.html">Explore</a>
+                        <a class="page-link" href="explore.html">Explore</a>
                     </li>
                     <!--<li>
                         <a href="news.html">News</a>
@@ -118,7 +118,7 @@
                         <a href="testimonials.html">Gallery</a>
                     </li>-->
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a class="page-link" href="contact.html">Contact</a>
                     </li>
                     <!--<li>
                       <a href="contact.html">Contact</a>
@@ -138,12 +138,15 @@
                         </ul>
                     </div>
                     <div class="brand">
-                        <h1 class="brand_name">
-                            <a href="./">Chitrayan</a>
-                        </h1>
                         <p class="brand_slogan">
                             A modern movie town in the heart of Kolkata
                         </p>
+                        <h1 class="brand_name">
+                            <a style="width: 900px" href="./"><img src="images/chitrayan/logo/chitrayan.png"></a>
+                        </h1>
+                        <!--<p class="brand_slogan">
+                            A modern movie town in the heart of Kolkata
+                        </p>-->
                     </div>
                 </div>
                 <div id="camera" class="camera_wrap" onload="loadCarousel();">
@@ -206,7 +209,7 @@
                     <div class="grid_4 wow fadeInRight">
                         <div class="box">
                             <h4>SHOOTING FLOOR</h4>
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img01_original.jpg">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/1.jpg">
                                 <img src="images/chitrayan/studio/1_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
@@ -219,7 +222,7 @@
                     <div class="grid_4 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="box">
                             <h4>MAKE-UP ROOMS</h4>
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img02_original.jpg">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/junior_makeup.jpg">
                                 <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
@@ -232,7 +235,7 @@
                     <div class="grid_4 wow fadeInRight" data-wow-delay="0.4s">
                         <div class="box">
                             <h4>PRODUCTION CONTROL ROOM</h4>
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img03_original.jpg">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/pcr2.jpg">
                                 <img src="images/chitrayan/facilities/pcr2_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
