--- a/about.html
+++ b/about.html
@@ -95,13 +95,13 @@
     <div class="container">
         <h3>our team</h3>
         <div class="row wow fadeInUp">
-            <div class="grid_3">
+            <div class="grid_4">
                 <div class="box3" data-equal-group="1">
-                    <img src="images/page-2_img02.jpg" alt="">
+                    <img src="images/chitrayan/owners/arup_som.jpg" alt="">
                     <div class="box3_cnt">
                         <h5>Arup Som</h5>
                         <h6>Founder & Owner</h6>
-                        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
+                        <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>-->
                         <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                             <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
@@ -111,13 +111,13 @@
                     </div>
                 </div>
             </div>
-            <div class="grid_3">
+            <div class="grid_4">
                 <div class="box3" data-equal-group="1">
-                    <img src="images/page-2_img03.jpg" alt="">
+                    <img src="images/chitrayan/owners/dido_som.jpg" alt="">
                     <div class="box3_cnt">
                         <h5>Sayantan Som</h5>
                         <h6>Co-Owner</h6>
-                        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
+                        <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>-->
                         <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                             <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
@@ -127,13 +127,13 @@
                     </div>
                 </div>
             </div>
-            <div class="grid_3">
+            <div class="grid_4">
                 <div class="box3" data-equal-group="1">
-                    <img src="images/page-2_img04.jpg" alt="">
+                    <img src="images/chitrayan/owners/ashok.jpg" alt="">
                     <div class="box3_cnt">
                         <h5>Ashok Bhattacharya</h5>
                         <h6>General Manager</h6>
-                        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
+                        <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>-->
                         <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                             <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
