--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
                 </div>
                 <div class="form-group">
                     <label for="email">Email address:</label>
+
                     <input type="email" class="form-control" id="email">
                 </div>
                 <div class="form-group">
@@ -17,26 +18,26 @@
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>-->
-            <form id="contact-form" class='contact-form'>
+            <form id="contact-form" class='contact-form' method="post" action="email\contactus.php">
                 <div class="contact-form-loader"></div>
                 <fieldset>
                     <div class="input-wrap">
                         <label class="name">
-                            <input type="text" name="name" placeholder="Name:" value=""
+                            <input type="text" name="contact_name" placeholder="Name:" value=""
                                    data-constraints="@Required @JustLetters"/>
 
                             <span class="empty-message">*This field is required.</span>
                             <span class="error-message">*This is not a valid name.</span>
                         </label>
                         <label class="email">
-                            <input type="text" name="email" placeholder="E-mail:" value=""
+                            <input type="text" name="contact_email" placeholder="E-mail:" value=""
                                    data-constraints="@Required @Email"/>
 
                             <span class="empty-message">*This field is required.</span>
                             <span class="error-message">*This is not a valid email.</span>
                         </label>
                         <label class="phone">
-                            <input type="text" name="phone" placeholder="Phone:" value=""
+                            <input type="text" name="contact_phone" placeholder="Phone:" value=""
                                    data-constraints="@JustNumbers"/>
 
                             <span class="empty-message">*This field is required.</span>
@@ -44,15 +45,16 @@
                         </label>
                     </div>
                     <label class="message">
-                  <textarea name="message" placeholder="Message:"
+                  <textarea name="contact_comments" placeholder="Message:"
                             data-constraints='@Required @Length(min=20,max=999999)'></textarea>
 
                         <span class="empty-message">*This field is required.</span>
                         <span class="error-message">*The message is too short.</span>
                     </label>
                     <div class="btn-wr">
-                        <a class="btn" href="#" data-type="reset">reset</a>
-                        <a class="btn" href="#" data-type="submit">submit</a>
+                        <!--<a class="btn" href="#" data-type="reset">reset</a>
+                        <a class="btn" href="#" data-type="submit">submit</a>-->
+                        <input class="btn" type="submit" value="Submit"/>
                     </div>
                 </fieldset>
                 <div class="modal fade response-message">
@@ -75,3 +77,31 @@
         </div>
     </section>
 </main>
+<!-- Form submit -->
+<script type='text/javascript'>
+    /* attach a submit handler to the form */
+    $("#contact-form").submit(function(event) {
+
+        console.log("form submit called");
+
+        /* stop form from submitting normally */
+        event.preventDefault();
+
+        /* get the action attribute from the <form action=""> element */
+        var $form = $( this ),
+                url = $form.attr( 'action' );
+
+        /* Send the data using post with element id name and name2*/
+        var posting = $.post( url, {
+            contact_name: $('#contact_name').val(),
+            contact_email: $('#contact_email').val(),
+            /*contact_subject: $('#contact_subject').val(),*/
+            contact_comments: $('#contact_comments').val()
+        } );
+
+        /* Alerts the results */
+        posting.done(function( data ) {
+            alert('success');
+        });
+    });
+</script>
