--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             A modern movie town in the heart of Kolkata
                         </p>
                         <h1 class="brand_name">
-                            <a style="width: 900px" href="./"><img src="images/chitrayan/logo/chitrayan.png"></a>
+                            <a style="max-width: 900px" href="./"><img src="images/chitrayan/logo/chitrayan_small.png"></a>
                         </h1>
                         <!--<p class="brand_slogan">
                             A modern movie town in the heart of Kolkata
@@ -298,25 +298,25 @@
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category02">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/2.jpg">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/2.JPG">
                                 <img class="preview-image" src="images/chitrayan/studio/2_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category02">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/3.jpg">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/3.JPG">
                                 <img class="preview-image" src="images/chitrayan/studio/3_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category02">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/4.jpg">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/4.JPG">
                                 <img class="preview-image" src="images/chitrayan/studio/4_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category02">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/5.jpg">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/5.JPG">
                                 <img class="preview-image" src="images/chitrayan/studio/5_preview.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
@@ -337,7 +337,7 @@
                         </div>
                         <div class="grid_4 isotop_item category03">
                             <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/parking_preview.jpg">
-                                <img class="preview-image" src="images/chitrayan/infra/parking.jpg" alt="">
+                                <img class="preview-image" src="images/chitrayan/infra/parking.JPG" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
@@ -405,8 +405,16 @@
                     <div class="grid_3">
                         <div class="box2">
                             <a href="#" class="box2_top">
-                                <div class="counter">01</div>
+                                <div class="counter">02</div>
                                 <h3>shows</h3>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="grid_3">
+                        <div class="box2">
+                            <a href="#" class="box2_top">
+                                <div class="counter">12</div>
+                                <h3>ads</h3>
                             </a>
                         </div>
                     </div>
@@ -421,7 +429,8 @@
                 <div id="google-map" class="map_model"></div>
                 <ul class="map_locations">
                     <li data-x="22.4538082" data-y="88.2816636">
-                        <p>Bagpota, Kolkata, West Bengal 700141</p>
+                        <p>KALAGACHIA, SAKHARIPOTA MAIN ROAD, P.O. THAKURPUKUR</p><br/>
+                        <p>P.S MAHESHTALA, DIST. SOUTH 24-PARGANAS</p>
                     </li>
                 </ul>
             </div>
@@ -449,8 +458,9 @@
                 <div class="grid_3">
                     <h5>Contacts</h5>
                     <address class="addr">
-                        <p>Bagpota, Kolkata, West Bengal 700141</p>
-                        <p>Freephone: <a href="callto:#">+91 9739988366</a></p>
+                        <p>KALAGACHIA, SAKHARIPOTA MAIN ROAD, P.O. THAKURPUKUR</p>
+                        <p>P.S MAHESHTALA, DIST. SOUTH 24-PARGANAS</p><br/>
+                        <p>Freephone: <a href="callto:#">+91 9830064251</a></p>
                     </address>
                 </div>
                 <div class="grid_5">
